--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
   margin: 0;
   padding: 0;
   font-family: 'Neucha', cursive;
+  text-align: center;
 }
+
 .page-body {
   text-align: center;
-  margin: 3rem;
-  height: 110vh;
 }
 
 /* ---FOOTER--- */
@@ -15,7 +15,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #FFFEF1;
+  background-color: #e1e0d4;
   display: flex;
   justify-content: space-around;
 }
@@ -60,10 +60,10 @@ input {
 }
 
 /* ---HOME--- */
-.raisins {
-  height: 500px;
-  border-radius: 50%;
-  border: 3px solid black;
+.home {
+  width: 50%;
+  margin: auto;
+  padding-top: 20%;
 }
 
 /* ---NOT FOUND--- */
@@ -78,5 +78,35 @@ input {
 .card-flex {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.index-header {
+  padding: 20px;
+}
+
+.btn-secondary {
+  --bs-btn-bg: #cac1b4 !important;
+  --bs-btn-hover-bg: #e8ddcc !important;
+}
+
+/* Cat Show */
+.card {
+  margin: 25px;
+}
+
+.cat-show {
+  margin-bottom: 50px;
+}
+
+.cat-show-align {
+  display: flex;
   justify-content: center;
 }
